--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-
-    "backend":"nodemon backend.js",
+    "backend": "nodemon backend.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -13,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "firebase": "^9.6.10",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
